force-app/main/default/objects/Case/fields/Consent_Request_Account__c.field-meta.xml
<CustomField>
    <fullName>Consent_Request_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent Request Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consent Request Cases</relationshipLabel>
    <relationshipName>Consent_Request_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>