force-app/main/default/objects/Case/fields/Exception_Account__c.field-meta.xml
<CustomField>
    <fullName>Exception_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exception Cases</relationshipLabel>
    <relationshipName>Exception_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>