force-app/main/default/objects/Case/fields/Report_Request_Account__c.field-meta.xml
<CustomField>
    <fullName>Report_Request_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Request Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report Request Cases</relationshipLabel>
    <relationshipName>Report_Request_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>