force-app/main/default/objects/Case/recordTypes/Consent_Request.recordType-meta.xml
<RecordType>
    <fullName>Consent_Request</fullName>
    <active>true</active>
    <businessProcess>Request_Process</businessProcess>
    <description>Consent request case record type.</description>
    <label>Consent Request</label>
</RecordType>