force-app/main/default/objects/Case/recordTypes/Exception.recordType-meta.xml
<RecordType>
    <fullName>Exception</fullName>
    <active>true</active>
    <businessProcess>Request_Process</businessProcess>
    <description>Exception case record type.</description>
    <label>Exception</label>
</RecordType>