force-app/main/default/objects/Case/recordTypes/Report_Request.recordType-meta.xml
<RecordType>
    <fullName>Report_Request</fullName>
    <active>true</active>
    <businessProcess>Request_Process</businessProcess>
    <description>Report request case record type.</description>
    <label>Report Request</label>
</RecordType>